fix: Search text is misaligned

--- a/src/assets/styles/_fy_select.scss
+++ b/src/assets/styles/_fy_select.scss
@@ -62,7 +62,6 @@ $sub-title: #ababab;
   padding: 0 12px;
   font-size: 14px;
   line-height: 18px;
-  margin-top: -4px;
 }
 
 %fy-select-header {
